automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -733,6 +733,8 @@
     "    return cost_curve_slope\n",
     "\n",
     "                    \n",
+    "    b_values = \n",
+    "                    \n",
     "                    Randomly choose a value of bb, and\n",
     "Update bb with the formula  b=(−.1)∗slopeb=i+b\n",
     "descent_steps = gradient_descent(budgets, revenues, 12, 133.33, learning_rate = .000001, current_m = 0)\n",
