automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -733,7 +733,7 @@
     "    return cost_curve_slope\n",
     "\n",
     "                    \n",
-    "    b_values = \n",
+    "    m_values = range(current_m,)\n",
     "                    \n",
     "                    Randomly choose a value of bb, and\n",
     "Update bb with the formula  b=(−.1)∗slopeb=i+b\n",
