--- a/index.ipynb
+++ b/index.ipynb
@@ -733,7 +733,7 @@
     "    return cost_curve_slope\n",
     "\n",
     "                    \n",
-    "    m_values = range(current_m,)\n",
+    "    m_values = range(current_m, learning_rate, step)\n",
     "                    \n",
     "                    Randomly choose a value of bb, and\n",
     "Update bb with the formula  b=(−.1)∗slopeb=i+b\n",
