--- a/index.ipynb
+++ b/index.ipynb
@@ -734,7 +734,7 @@
     "\n",
     "                    \n",
     "    m_values = [range(current_m, learning_rate, steps)]\n",
-    "            \n",
+    "    for i in m_values: \n",
     "                    \n",
     "                    Randomly choose a value of bb, and\n",
     "Update bb with the formula  b=(−.1)∗slopeb=i+b\n",
