--- a/index.ipynb
+++ b/index.ipynb
@@ -735,6 +735,7 @@
     "                    \n",
     "    m_values = [range(current_m, learning_rate, steps)]\n",
     "    for i in m_values: \n",
+    "        cost_curve_slope = slope a\n",
     "                    \n",
     "                    Randomly choose a value of bb, and\n",
     "Update bb with the formula  b=(−.1)∗slopeb=i+b\n",
