automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -736,7 +736,7 @@
     "    m_values = [range(current_m, learning_rate, steps)]\n",
     "    for i in m_values: \n",
     "        cost_curve_slope = slope_at(x_values, y_values, i, b)\n",
-    "    cost_curve_slope['rss'] residual\n",
+    "    cost_curve_slope['rss'] residual_sum_squares(x_values, y_values, i, b)\n",
     "                    \n",
     "                    Randomly choose a value of bb, and\n",
     "Update bb with the formula  b=(−.1)∗slopeb=i+b\n",
