automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -737,7 +737,7 @@
     "    for i in m_values: \n",
     "        cost_curve_slope = slope_at(x_values, y_values, i, b)\n",
     "        cost_curve_slope['rss'] residual_sum_squares(x_values, y_values, i, b)\n",
-    "    return cost_c\n",
+    "    return cost_curve_slope\n",
     "                    \n",
     "                    Randomly choose a value of bb, and\n",
     "Update bb with the formula  b=(−.1)∗slopeb=i+b\n",
