--- a/index.ipynb
+++ b/index.ipynb
@@ -735,7 +735,7 @@
     "                    \n",
     "    m_values = [range(current_m, learning_rate, steps)]\n",
     "    for i in m_values: \n",
-    "        cost_curve_slope = slope_at(x_values, y_values, i, b)\n",
+    "        cost_curve_slope = {slope_at(x_values, y_values, i, b)\n",
     "        cost_curve_slope['rss'] residual_sum_squares(x_values, y_values, i, b)\n",
     "    return cost_curve_slope\n",
     "                    \n",
