--- a/index.ipynb
+++ b/index.ipynb
@@ -721,21 +721,9 @@
    ],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
-    "    cost_curve_slope = slope_at(x_values, y_values, current_m, b)\n",
-    "    cost_curve_slope['rss'] = residual_sum_squares(x_values, y_values, current_m, b)\n",
-    "    for i in range(steps):\n",
-    "        new_m = updated_m((i * learning_rate) + current_m, learning_rate, current_m)\n",
-    "    return dict(map(lambda n: \n",
-    "                 \n",
-    "                 i = slope_at(x_values, y_values, current_m, b)['slope']\n",
-    "        new_m = updated_m(current_m, learning_rate, i)\n",
-    "        \n",
-    "    return cost_curve_slope\n",
-    "\n",
-    "                    \n",
-    "    m_values = [range(current_m, learning_rate, steps)]\n",
+    "                   m_values = [range(current_m, learning_rate, steps)]\n",
     "    for i in m_values: \n",
-    "        cost_curve_slope = {slope_at(x_values, y_values, i, b)\n",
+    "        cost_curve_slope = {slope_at(x_values, y_values, i, b)}\n",
     "        cost_curve_slope['rss'] residual_sum_squares(x_values, y_values, i, b)\n",
     "    return cost_curve_slope\n",
     "                    \n",
