--- a/index.ipynb
+++ b/index.ipynb
@@ -705,26 +705,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'m': 'slope', 'rss': 368964.16669999994}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    m_values = [range(current_m, learning_rate, steps)]\n",
     "    for i in m_values: \n",
     "        cost_curve_slope = {slope_at(x_values, y_values, i, b)}\n",
-    "        cost_curve_slope['rss'] residual_sum_squares(x_values, y_values, i, b)\n",
+    "        cost_curve_slope['rss'] = residual_sum_squares(x_values, y_values, i, b)\n",
     "    return cost_curve_slope\n",
     "                    \n",
     "\n",
