--- a/index.ipynb
+++ b/index.ipynb
@@ -722,18 +722,19 @@
     }
    ],
    "source": [
-    "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
-    "    m_values = []\n",
-    "    m_values.append(range(current_m, learning_rate, steps))\n",
-    "    return m_values\n",
+    "#def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
+    "    #m_values = []\n",
+    "    #m_values.append(range(current_m, learning_rate, steps))\n",
+    "    #return m_values\n",
     "    #for i in m_values: \n",
     "        #cost_curve_slope = {slope_at(x_values, y_values, i, b)}\n",
     "        #cost_curve_slope['rss'] = residual_sum_squares(x_values, y_values, i, b)\n",
     "    #return cost_curve_slope\n",
     "                    \n",
     "\n",
-    "descent_steps = gradient_descent(budgets, revenues, 12, 133.33, learning_rate = .000001, current_m = 0)\n",
-    "descent_steps\n",
+    "        \n",
+    "#descent_steps = gradient_descent(budgets, revenues, 12, 133.33, learning_rate = .000001, current_m = 0)\n",
+    "#descent_steps\n",
     "    #rss = residual_sum_squares(x_values, y_values, updated_m, b)\n",
     "    #updated_m(m, learning_rate, current_m)\n",
     "    #slope_at(x_values, y_values, current_m, b)\n",
