--- a/index.ipynb
+++ b/index.ipynb
@@ -731,7 +731,7 @@
     "        #cost_curve_slope['rss'] = residual_sum_squares(x_values, y_values, i, b)\n",
     "    #return cost_curve_slope\n",
     "                    \n",
-    "\n",
+    "print range(current_m, learning_rate, s)\n",
     "        \n",
     "#descent_steps = gradient_descent(budgets, revenues, 12, 133.33, learning_rate = .000001, current_m = 0)\n",
     "#descent_steps\n",
