--- a/index.ipynb
+++ b/index.ipynb
@@ -730,7 +730,7 @@
     "        #cost_curve_slope['rss'] = residual_sum_squares(x_values, y_values, i, b)\n",
     "    #return cost_curve_slope\n",
     "\n",
-    "\n",
+    "current_m = 0\n",
     "m_values = range(current_m, learning_rate, steps)\n",
     "print(m_values)\n",
     "        \n",
