automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -731,6 +731,7 @@
     "    #return cost_curve_slope\n",
     "\n",
     "current_m = 0\n",
+    "learning_rate = .000001\n",
     "m_values = range(current_m, learning_rate, steps)\n",
     "print(m_values)\n",
     "        \n",
