automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -732,6 +732,7 @@
     "\n",
     "current_m = 0\n",
     "learning_rate = .000001\n",
+    "steps = 12\n",
     "m_values = range(current_m, learning_rate, steps)\n",
     "print(m_values)\n",
     "        \n",
