--- a/index.ipynb
+++ b/index.ipynb
@@ -736,7 +736,7 @@
     "m_values = range(current_m, learning_rate, steps)\n",
     "print(m_values)\n",
     "\n",
-    "m_\n",
+    "m_values = list(map(lambda ))\n",
     "        \n",
     "#descent_steps = gradient_descent(budgets, revenues, 12, 133.33, learning_rate = .000001, current_m = 0)\n",
     "#descent_steps\n",
